--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Arbuz & Laurice # add your name
-author-img: author.jpg # add your photo
+author-img: author.png # add your photo
 about-author: For recording things # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
